homelab/gcompris/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gcompris
  annotations:
    argocd.argoproj.io/sync-wave: "0"
